--- a/DemoExam/PagesApp/ServicesPage.xaml
+++ b/DemoExam/PagesApp/ServicesPage.xaml
@@ -51,7 +51,7 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="5*"/>
                         </Grid.ColumnDefinitions>
-                        <Image Grid.Column="0" Grid.Row="1" Source="{Binding Path = ImagePath}" Width="200" Height="200" Margin="0 0 10 8"/>
+                        <Image Grid.Column="0" Grid.Row="1" Source="{Binding Path = MainImage}" Width="200" Height="200" Margin="0 0 10 8"/>
                         <StackPanel HorizontalAlignment="Stretch" Orientation="Vertical" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" >
                             <TextBlock Text="{Binding Path = Title}"></TextBlock>
                             <StackPanel>
